# semantic-relaxation

./: .clang-format  .gitignore  CMakeLists.txt  README.md  bench.txt  cat_latest_log.sh  find_min_log.sh  med.txt  med2.txt  out.txt  readme.md  rename.sh  run.sh  test.py  test_results.txt
docs/: README.md  (+3 more)
src/: BatchPopImp.cpp  Benchmark.cpp  CMakeLists.txt  GeijerBatch.cpp  GeijerImp.cpp  QKParser.cpp  ReplayImp.cpp  main.cpp  qkparser.cpp
src/impl/: AITImp.cpp  AugmentedIntervalTree.cpp  BatchPopImp.cpp  CMakeLists.txt  CudaImp.cu  FAAImp.cpp  FenwickAImp.cpp  FenwickDelayImp.cpp  FenwickImp.cpp  FewnwickTree.cpp  GeijerBatch.cpp  GeijerBatchImp.cpp  GeijerBatchPopImp.cpp  GeijerDelayImp.cpp  GeijerImp.cpp  HeuristicGeijer.cpp  IVTImp.cpp  Interval.cpp  MinMax2DDAImp.cpp  MonteFenwickImp.cpp  MonteReplayTree.cpp  MonteSweepingLine.cpp  OrderApproxImp.cpp  ParallelBatchImp.cpp  ParallelBox.cpp  ParallelBoxImp.cpp  ParallelFenwickImp.cpp  ParallelGeijer.cpp  ReplayImp.cpp  ReplayTreeAImp.cpp  ReplayTreeImp.cpp  SweepingLineAImp.cpp  SweepingLineImp.cpp
src/impl/2dd-queue-opt-1ms-1t/: combined_get_stamps.txt  combined_put_stamps.txt
src/impl/2dd-queue-opt-1ms-4t-i10k/: combined_get_stamps.txt  combined_put_stamps.txt
src/impl/stackImpl/: CMakeLists.txt  FenwickStackImp.cpp  (+2 more)
src/implementations/: AITImp.cpp  AugmentedIntervalTree.cpp  CMakeLists.txt  GeijerBatch.cpp  GeijerBatchPopImp.cpp  GeijerImp.cpp  IVTImp.cpp  Interval.cpp  QKParser.cpp
src/util/: AugmentedIntervalTree.cpp  Benchmark.cpp  CMakeLists.txt  QKParser.cpp  SegmentTree.cpp  TimestampParser.cpp
(+106 files in other folders)
